--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 	<head>
 		<title>SWFObject 2 static publishing example page</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+		<script type="text/javascript" src="ruffle.js"></script>
 		<script type="text/javascript" src="swfobject.js"></script>
 		<script type="text/javascript">
-		swfobject.registerObject("myId", "9.0.0", "expressInstall.swf");
+		swfobject.registerObject("myId", "9.0.0", "youare.swf");
 		</script>
 	</head>
 	<body>
 		<div>	
 			<object id="myId" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="300" height="140">
-				<param name="movie" value="test.swf" />
+				<param name="movie" value="youare.swf" />
         		<!--[if !IE]>-->
-				<object type="application/x-shockwave-flash" data="test.swf" width="300" height="140">
+				<object type="application/x-shockwave-flash" data="youare.swf" width="300" height="140">
 				<!--<![endif]-->
 				<div>
 					<h1>Alternative content</h1>
