--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 	<head>
+		<h1>This page is built from the SWFobject example page, with changes</h1>
 		<title>SWFObject 2 static publishing example page</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 		<script type="text/javascript" src="ruffle.js"></script>
@@ -11,10 +12,10 @@
 	</head>
 	<body>
 		<div>	
-			<object id="myId" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="300" height="140">
+			<object id="myId" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="1024" height="768">
 				<param name="movie" value="youare.swf" />
         		<!--[if !IE]>-->
-				<object type="application/x-shockwave-flash" data="youare.swf" width="300" height="140">
+				<object type="application/x-shockwave-flash" data="youare.swf" width="1024" height="768">
 				<!--<![endif]-->
 				<div>
 					<h1>Alternative content</h1>
