--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<script type="text/javascript">
 		swfobject.registerObject("myId", "9.0.0", "youare.swf");
 		</script>
+		<a href="https://youareanidiot.cc">Version with POPUPS!</a>
 	</head>
 	<body>
 		<div>	
