--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		swfobject.registerObject("myId", "9.0.0", "youare.swf");
 		</script>
 		<a href="https://youareanidiot.cc">Version with POPUPS!</a>
+		<a href="help/troubleshooting">Troubleshooting">
+	
 	</head>
 	<body>
 		<div>	
