--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		swfobject.registerObject("myId", "9.0.0", "youare.swf");
 		</script>
 		<a href="https://youareanidiot.cc">Version with POPUPS!</a>
-		<a href="help/troubleshooting">Troubleshooting">
+		<a href="help/troubleshooting/index.html">Troubleshooting</a>
 	
 	</head>
 	<body>
