--- a/help/troubleshooting/index.html
+++ b/help/troubleshooting/index.html
@@ -4,6 +4,6 @@
 <h1>HOWEVER...</h1>
 <p>If the error doesn't go away, try restarting your browser and/or device.</p>
 <h1>IF THE ERROR DOESNT GO AWAY THEN...</h1>
-<p>Open a new issue on GitHub and state your browser and device info.</
-<a href="https://github.com/SonicFan2020-best/YouAreAnIdiot-harmless/issues/new">
-         <img alt="Create a new issue" src="button.jpg" width=150" height="70">
+<p>Open a new issue on GitHub and state your browser and device info.</p>
+<a href="https://github.com/SonicFan2020-best/YouAreAnIdiot-harmless/issues/new">Create new issue</a>
+         
